[package]
name = "kad"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
bigint = { version = "4.4.3", features = ["serde", "serialize"] }
futures = "0.3.30"
mockall = "0.12.1"
mockall_double = "0.3.1"
no_deadlocks = "1.3.2"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2"] }
serde = "1.0.202"
serde_json = "1.0.117"
tarpc = { version = "0.34.0", features = ["full", "serde"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-test = "0.2.4"
