[package]
name = "kad"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
bincode = "1.3.3"
flate2 = "1.0.33"
futures = "0.3.30"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2"] }
serde = "1.0.202"
serde_json = "1.0.120"
tarpc = { version = "0.34.0", features = ["serde-transport", "serde-transport-json", "tcp", "serde1"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
uint = "0.9.5"
